--- a/package.json
+++ b/package.json
@@ -2,17 +2,23 @@
     "name": "hello_world",
     "version": "1.0.0",
     "description": "Hello world in Node.js",
-    "main": "index.js",
+    "main": "server.js",
     "scripts": {
+        "start": "node server.js",
+        "start:dev": "NODE_ENV=development node server.js",
+        "start:prod": "NODE_ENV=production node server.js",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
-    "author": "hxu",
-    "license": "MIT",
+    "engines": {
+        "node": ">=18.0.0"
+    },
     "dependencies": {
         "cors": "^2.8.5",
         "express": "^5.2.1",
         "express-rate-limit": "^8.2.1",
         "express-validator": "^7.3.1",
         "helmet": "^8.1.0"
-    }
+    },
+    "author": "hxu",
+    "license": "MIT"
 }
